<resources>
    <string name="app_name">SejiwaProject</string>
    <string name="name_league">English Premier League</string>
    <string name="league_location">England</string>
    <string name="desc">The Premier League (often referred to as the English Premier League (EPL) outside England), is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League (EFL)</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="formed_year">Since</string>
    <string name="dummy_year">1980</string>

    <array name="league">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Portuguese Primeira Liga</item>
        <item>Scottish Premier League</item>
        <item>Spanish La Liga</item>
        <item>American Major League</item>
    </array>

    <string-array name="leagueID">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4344</item>
        <item>4330</item>
        <item>4335</item>
        <item>4346</item>
    </string-array>

    <string-array name="leagueDescription">
        <item>The Premier League (often referred to as the English Premier League (EPL) outside England), is the top level of the English football league system. Contested by 20 clubs, it operates on a system of promotion and relegation with the English Football League (EFL).</item>
        <item>Ligue 1 (French pronunciation: League 1, formerly known as Division 1), is the French professional league for association football clubs. It is the country\'s primary football competition and serves as the top division of the French football league system. Ligue 1 is one of two divisions making up the Ligue de Football Professionnel, the other being Ligue 2.</item>
        <item>The Bundesliga, is a professional association football league in Germany and the football league with the highest average stadium attendance worldwide. At the top of the German football league system, the Bundesliga is Germany\'s primary football competition.</item>
        <item>Serie A, also called Serie A TIM due to sponsorship by Telecom Italia, is a professional league competition for football clubs located at the top of the Italian football league system and has been operating for over eighty years since the 1929–30 season. It had been organized by Lega Calcio until 2010, but a new league, the Lega Serie A, was created for the 2010–11 season.</item>
        <item>The Primeira Liga (First League; Portuguese pronunciation: ), formerly called Primeira Divisão), is the top professional association football division of the Portuguese football league system.</item>
        <item>The Scottish Premiership is the top division of the Scottish Professional Football League, the league competition for professional football clubs in Scotland. The Scottish Premiership was established in July 2013, after the Scottish Professional Football League was formed by a merger of the Scottish Premier League and Scottish Football League.</item>
        <item>The Primera División, commonly known as La Liga and as La Liga Santander for sponsorship reasons, is the top professional association football division of the Spanish football league system.</item>
        <item>Major League Soccer (MLS) is a professional soccer league representing the sport\'s highest level in both the United States and Canada. MLS constitutes one of the major professional sports leagues of the United States and Canada. The league is composed of 20 teams—17 in the U.S. and 3 in Canada.</item>
    </string-array>

    <string-array name="leagueLocation">
        <item>England</item>
        <item>France</item>
        <item>Germany</item>
        <item>Italia</item>
        <item>Portugal</item>
        <item>Scotland</item>
        <item>Spanyol</item>
        <item>USA</item>
    </string-array>

    <array name="leagueLogo">
        <item>@drawable/english</item>
        <item>@drawable/france</item>
        <item>@drawable/germany</item>
        <item>@drawable/italia</item>
        <item>@drawable/portugal</item>
        <item>@drawable/scotland</item>
        <item>@drawable/spanyol</item>
        <item>@drawable/usa</item>
    </array>
    <string name="title_activity_detail_move">DetailMoveActivity</string>
    <string name="tab_1">Next Match</string>
    <string name="tab_2">Previous Match</string>
    <string name="title_activity_detail_tab">DetailTabActivity</string>
    <string name="match_title">Match</string>
    <string name="dummy">:</string>
    <string name="score">0</string>
    <string name="team_title">nama team</string>
    <string name="ft">FT</string>
    <string name="goal">Goal</string>
    <string name="dummy_score">-</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="dummy_max_score">10</string>
</resources>
